# stm32l4x6

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  STM32L4x6.svd  device.x  gen-peripherals.sh
src/: adc.rs  adc1.rs  adc123_common.rs  adc_common.rs  advanced_timer.rs  aes.rs  basic_timer.rs  btim.rs  can.rs  comp.rs  crc.rs  dac.rs  dbgmcu.rs  dfsdm.rs  dma1.rs  exti.rs  firewall.rs  flash.rs  fmc.rs  general_1channel_timer.rs  general_2channel_timer.rs  general_timer.rs  gpio.rs  gpiob.rs  gptim.rs  i2c.rs  i2c1.rs  iwdg.rs  lcd.rs  lib.rs  low_power_timer.rs  lptim1.rs  lpuart.rs  lpuart1.rs  nvic.rs  opamp.rs  otg_fs_device.rs  otg_fs_global.rs  otg_fs_host.rs  otg_fs_pwrclk.rs  (+23 more)
src/adc1/: awd2cr.rs  awd3cr.rs  calfact.rs  cfgr.rs  cfgr2.rs  cr.rs  difsel.rs  dr.rs  ier.rs  isr.rs  jdr1.rs  jdr2.rs  jdr3.rs  jdr4.rs  jsqr.rs  ofr1.rs  ofr2.rs  ofr3.rs  ofr4.rs  smpr1.rs  smpr2.rs  sqr1.rs  sqr2.rs  sqr3.rs  sqr4.rs  tr1.rs  tr2.rs  tr3.rs
src/adc123_common/: ccr.rs  cdr.rs  csr.rs
src/aes/: cr.rs  dinr.rs  doutr.rs  ivr0.rs  ivr1.rs  ivr2.rs  ivr3.rs  keyr0.rs  keyr1.rs  keyr2.rs  keyr3.rs  sr.rs
src/can/: btr.rs  esr.rs  f0r1.rs  f0r2.rs  f10r1.rs  f10r2.rs  f11r1.rs  f11r2.rs  f12r1.rs  f12r2.rs  f13r1.rs  f13r2.rs  f14r1.rs  f14r2.rs  f15r1.rs  f15r2.rs  f16r1.rs  f16r2.rs  f17r1.rs  f17r2.rs  f18r1.rs  f18r2.rs  f19r1.rs  f19r2.rs  f1r1.rs  f1r2.rs  f20r1.rs  f20r2.rs  f21r1.rs  f21r2.rs  f22r1.rs  f22r2.rs  f23r1.rs  f23r2.rs  f24r1.rs  f24r2.rs  f25r1.rs  f25r2.rs  f26r1.rs  f26r2.rs  (+45 more)
src/comp/: comp1_csr.rs  comp2_csr.rs
src/crc/: cr.rs  dr.rs  idr.rs  init.rs  pol.rs
src/dac/: ccr.rs  cr.rs  dhr12l1.rs  dhr12l2.rs  dhr12ld.rs  dhr12r1.rs  mcr.rs  (+13 more)
(+684 files in other folders)
