[package]
authors = ["Brandon Edens <brandonedens@gmail.com>"]
description = "Memory map for STM32L4x6 microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "stm32l4"]
license = "MIT OR Apache-2.0"
name = "stm32l4x6"
repository = "https://github.com/brandonedens/stm32l4x6"
version = "0.3.0"

[dependencies]
cortex-m = "0.2.4"
vcell = "0.1.0"
